BuildHughes/translation-tool/inputs/source_meta/objects/HSvc_AccountTransaction__c.object
<CustomObject>
    <fields>
        <fullName>Acc_Label_Formula__c</fullName>
        <formula>HSvc_TransactionCode__r.Label_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acc_Label_Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DateCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_AccTransactionCode__c</fullName>
        <label>Account Transaction Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ESM</fullName>
                </value>
                <value>
                    <fullName>BEN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_AccTransactionDescription__c</fullName>
        <label>Account Transaction Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Transactions</relationshipLabel>
        <relationshipName>Account_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_Actual_Lock_Date__c</fullName>
        <description>To store the actual lock date from asset, when the details are updated from DI</description>
        <label>Actual Lock Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSvc_Actual_Reactivate_Date__c</fullName>
        <description>To store the actual reactivate date, when the asset is updated from DI</description>
        <label>Actual Reactivate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSvc_AllowStartEndDate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Start End Dates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Asset__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Account Transactions</relationshipLabel>
        <relationshipName>Account_Transactions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_AvailableOnSelfService__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available on Self Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_BillingResonCode__c</fullName>
        <label>Billing Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Account Transactions</relationshipLabel>
        <relationshipName>Account_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HSvc_CloseCase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Close Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSvc_End_Date_Time__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HSvc_FollowOnAccTransactionCode__c</fullName>
        <label>Follow on Account Transaction Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ESM</fullName>
                </value>
                <value>
                    <fullName>BEN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_FollowOnReason__c</fullName>
        <label>Follow On Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_HNSProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HNS Product</label>
        <referenceTo>HNS_Products__c</referenceTo>
        <relationshipLabel>Account Transactions</relationshipLabel>
        <relationshipName>Account_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_LabelValue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Label Vaue</label>
        <referenceTo>HSvc_LabelValue__c</referenceTo>
        <relationshipLabel>Account Transactions</relationshipLabel>
        <relationshipName>Account_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_MIP__c</fullName>
        <label>MIP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_MessageCode__c</fullName>
        <label>Message Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_ProviderGroup__c</fullName>
        <label>Provider Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sample</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Response_Message__c</fullName>
        <label>Response Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_SerialNumber__c</fullName>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSvc_System__c</fullName>
        <label>System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_TransactionCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Code</label>
        <referenceTo>HSvc_AccountTransactionCodeMaster__c</referenceTo>
        <relationshipLabel>Account Transactions</relationshipLabel>
        <relationshipName>Account_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_TransactionReason__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Reason</label>
        <referenceTo>HSvc_AccTrxnReason__c</referenceTo>
        <relationshipLabel>Account Transactions</relationshipLabel>
        <relationshipName>Account_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_TransactionStatus__c</fullName>
        <label>Transaction Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Pending Confirmation</fullName>
                </value>
                <value>
                    <fullName>To be processed</fullName>
                    <default>true</default>
                    <label>To be processed</label>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_Asset_SAN__c</fullName>
        <description>This field stores the value of Hughes Asset ID from Asset that needs to be sent.</description>
        <formula>HSvc_Asset__r.Hughes_Asset_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset SAN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_Batch_status__c</fullName>
        <label>Batch Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hsvc_CreateFollowOnTransaction__c</fullName>
        <formula>HSvc_TransactionReason__r.HSvc_CreateFollowOnTransaction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Follow On Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hsvc_DescriptionLabel__c</fullName>
        <description>Stores the label name of the corresponding description. Purpose of this field is to fetch the description dynamically in the current user&apos;s language.</description>
        <label>Description Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_Retention_Fee__c</fullName>
        <description>This field will have values from Account Transaction reason object.</description>
        <label>Reconnection Charge</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hsvc_Start_Date_Time__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hsvc_TransactionCodeName__c</fullName>
        <formula>HSvc_TransactionCode__r.HSvc_TransactionCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Code Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_TransactionReasonName__c</fullName>
        <formula>HSvc_TransactionReason__r.Reason_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Reason Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label_Formula__c</fullName>
        <formula>HSvc_LabelValue__r.Label_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period_In_Days__c</fullName>
        <formula>if( AND(NOT(ISBLANK(HSvc_StartDate__c)), NOT(ISBLANK(HSvc_EndDate__c)), HSvc_EndDate__c &gt;= HSvc_StartDate__c), HSvc_EndDate__c -  HSvc_StartDate__c +1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period(In Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProcessDate__c</fullName>
        <description>Process Date for ACTV Account Transaction.</description>
        <label>ProcessDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retry_Count__c</fullName>
        <description>Used for exponential retry in batch</description>
        <label>Retry Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_Formula__c</fullName>
        <formula>HSvc_LabelValue__r.Value_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value</label>
        <type>Text</type>
    </fields>
    <label>Account Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>HSvc_TransactionStatus__c</columns>
        <columns>HSvc_TransactionCode__c</columns>
        <columns>HSvc_TransactionReason__c</columns>
        <columns>HSvc_Asset__c</columns>
        <columns>HSvc_Account__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AT-{0000}</displayFormat>
        <label>Account Transation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>HSvc_AlllowedDateDifference</fullName>
        <active>true</active>
        <description>Difference between start date and end date should not be</description>
        <errorConditionFormula>(HSvc_EndDate__c - HSvc_StartDate__c) &gt; 180</errorConditionFormula>
        <errorMessage>Difference between End Date and Start Date should be maximum of 180 days.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HSvc_EndDategreaterthanStartDate</fullName>
        <active>true</active>
        <description>End date should be greater than start date</description>
        <errorConditionFormula>AND(DateCheck__c == true,OR(ISBLANK(HSvc_StartDate__c ) ,HSvc_StartDate__c &gt; HSvc_EndDate__c))</errorConditionFormula>
        <errorMessage>End Date should be greater than Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HSvc_SeasonalSuspAllowedDateDifference</fullName>
        <active>true</active>
        <errorConditionFormula>((UPPER(Hsvc_TransactionCodeName__c) == &apos;LOCK&apos;) &amp;&amp; (UPPER(Hsvc_TransactionReasonName__c) == &apos;SEASONAL SUSPENSION&apos;)) &amp;&amp;
(((HSvc_EndDate__c - HSvc_StartDate__c) &gt; 120) || ((HSvc_EndDate__c - HSvc_StartDate__c) &lt; 30))</errorConditionFormula>
        <errorMessage>The duration of the suspension has to be greater than or equal to 30 days and less than or equal to 120 days.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Hsvc_ProcessDateCannotBeGreaterThanToday</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ProcessDate__c &lt; TODAY(),PRIORVALUE(ProcessDate__c) &lt;  ProcessDate__c)</errorConditionFormula>
        <errorDisplayField>ProcessDate__c</errorDisplayField>
        <errorMessage>Process date should be greater than today and less than current process date</errorMessage>
    </validationRules>
</CustomObject>